# mlops-team10

./: LICENSE  Makefile  README.md  data.dvc  docker-compose.yml  environment.yml  pyproject.toml
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-static-checks.yml
.github/workflows/envs/: github-actions.yml
architecture/: architecturereadme.md
docs/: mkdocs.yml
docs/docs/: index.md
mlflow/: Dockerfile
mlops_bootcamp_team10/: __init__.py  dataset.py  features.py  plots.py
mlops_bootcamp_team10/api/: dockerfile  main.py  requirements.txt
mlops_bootcamp_team10/app/: main.py  requirements.txt
mlops_bootcamp_team10/data/: .gitignore  clean.py.dvc  cleaning.py  prep.py.dvc
mlops_bootcamp_team10/modeling/: predict.py  train.py
notebooks/: 1.5-ep-data-clusterization.ipynb  2.0-xc-cancellation-prediction-model.ipynb  3.01-xc-cancellation-prediction-model.ipynb  3.02-xc-cancellation-prediction-model.ipynb  3.03-xc-model-selection.ipynb
references/: variable_description.md
reports/: Requirements.md
